# in-one-weekend

./: Cargo.toml  LICENSE  README.md
src/: camera.rs  hittable.rs  lib.rs  main.rs  progressive.rs  scene.rs
src/material/: composite.rs  emissive.rs  glossy.rs  lambertian.rs  mapper.rs  metal.rs  mod.rs  portal.rs
src/material/albedo/: mod.rs  normals.rs  solid.rs
src/math/: color.rs  hit.rs  mod.rs  ray.rs  space.rs
src/rng/: mod.rs  small.rs  wyrand.rs
src/shape/: csg.cursed.rs  csg.rs  mod.rs  plane.rs  sphere.rs  volume.rs
