[package]
name = "in-one-weekend"
version = "0.1.0"
authors = ["Logan Darklock <logandarklock@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minifb = "0.19.1"
rayon = "1.4.1"
ultraviolet = { git = "https://github.com/termhn/ultraviolet", features = ["f64"] }
rand = { version = "0.7.3", features = ["small_rng"] }
nanorand = "0.4.4"
oidn = "1.3.0"

[profile.release]
lto = true
incremental = true
codegen-units = 1
panic = "abort"
debug = true
